add env example file

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,12 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_TO_DEV=
+MAIL_TO_CONTACT=
+MAIL_TO_REFERRAL=
+MAIL_TO_APPLICATION=
+MAIL_TO_PRE_ENROLMENT=
+MAIL_TO_PRE_ENROLMENT_HNM=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
